# storage-blob-cpp-getting-started

./: BlobStorage.sln  CONTRIBUTING.md  README.md  storage-blob-cpp-getting-started.sln  storage-cpp.sln
BlobStorage/: BlobStorage.cpp  BlobStorage.vcxproj  BlobStorage.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
storage-blob-cpp-getting-started/: CMakeLists.txt  blob_advanced.cpp  blob_advanced.h  blob_basic.cpp  blob_basic.h  queue_advanced.cpp  queue_advanced.h  queue_basic.cpp  queue_basic.h  stdafx.h  storage-blob-cpp-getting-started.vcxproj  storage-getting-started.cpp  string_util.cpp  string_util.h  table_advanced.cpp  table_advanced.h  table_basic.cpp  table_basic.h
storage-blob-cpp-getting-started/cmake/Modules/: FindAzureStorage.cmake
storage-cpp/: BlobBasic.cpp  BlobBasic.h  blob_advanced.cpp  blob_advanced.h  blob_basic.cpp  blob_basic.h  packages.config  queue_advanced.cpp  queue_advanced.h  queue_basic.cpp  queue_basic.h  stdafx.cpp  stdafx.h  storage-cpp.cpp  storage-cpp.vcxproj  storage-cpp.vcxproj.filters  table_advanced.cpp  table_advanced.h  table_basic.cpp  table_basic.h  targetver.h
